--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
       // Service Worker를 등록
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/serviceworker.js').then(registration => {
+          navigator.serviceWorker.register('./serviceworker.js').then(registration => {
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
           }, err => {
             console.log('ServiceWorker registration failed: ', err);
