--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/imgs/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="192x192" href="/imgs/logo192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/imgs/logo512.png">
     <title>WalkWalk</title>
   </head>
   <body>
